deploy/prod/deploy-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: operatorsync-worker
  namespace: crossbell
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: operatorsync
      tier: worker
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: operatorsync
        tier: worker
    spec:
      enableServiceLinks: false
      nodeSelector:
        rss3.io/usage: csb-others
      tolerations:
      - key: "rss3.io/usage"
        operator: "Equal"
        value: "csb-others"
        effect: "NoSchedule"
      containers:
        - image: $IMAGE_TAG_RELEASE
          imagePullPolicy: Always
          name: operatorsync-worker
          command: ["worker"]
          resources:
            requests:
              memory: '200Mi'
              cpu: '100m'
            limits:
              memory: '2500Mi'
              cpu: '2500m'
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
