deploy/prod/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: opsync
  namespace: crossbell
spec:
  type: ClusterIP
  selector:
    app: operatorsync
    tier: server
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: opsync-worker
  namespace: crossbell
spec:
  type: ClusterIP
  selector:
    app: operatorsync
    tier: worker
  ports:
    - name: rpc
      protocol: TCP
      port: 22915
      targetPort: 22915
